--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,31 +4,31 @@ services:
   agent:
     build:
       context: .
-      dockerfile: Dockerfile
-      target: production
-    container_name: sentinel-rag-agent
+      dockerfile: Dockerfile.agent
+    container_name: sentinel-agent
     ports:
-      - "8000:8000"
+      - "8001:8001"
     environment:
-      - HOST=0.0.0.0
-      - PORT=8000
-      - LOG_LEVEL=INFO
-      - LOG_FORMAT=json
-      - SENTINEL_URL=${SENTINEL_URL:-http://localhost:8000}
+      - AGENT_PORT=8001
+      - SENTINEL_URL=${SENTINEL_URL:-http://host.docker.internal:8000}
       - SENTINEL_API_KEY=${SENTINEL_API_KEY}
       - OPENROUTER_API_KEY=${OPENROUTER_API_KEY}
       - LLM_MODEL=${LLM_MODEL:-gpt-4-turbo-preview}
-      - LLM_TEMPERATURE=0.1
-      - OTEL_ENABLED=true
-      - OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
-      - OTEL_SERVICE_NAME=sentinel-rag-agent
+      - OTEL_ENABLED=false
+    depends_on:
+      - mcp
+    restart: unless-stopped
+
+  mcp:
+    build:
+      context: .
+      dockerfile: Dockerfile.mcp
+    container_name: sentinel-mcp
+    ports:
+      - "9000:9000"
+    environment:
+      - MCP_PORT=9000
+      - MCP_INTERCEPTOR_TOKEN=${MCP_INTERCEPTOR_TOKEN:-mcp-secret-token}
     volumes:
-      - ./data:/app/data:ro
-      - ./config:/app/config:ro
-    healthcheck:
-      test: ["CMD", "python", "-c", "import httpx; httpx.get('http://localhost:8000/health', timeout=5)"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 10s
+      - ./mcp/data:/app/mcp/data
     restart: unless-stopped
