--- a/env.template
+++ b/env.template
@@ -6,18 +6,16 @@
 # ===========================================
 
 # Interceptor Backend URL
-# The URL of the Interceptor service that handles tool execution
 SENTINEL_URL=http://localhost:8000
 
 # API Key for Interceptor authentication
-# Get this from your interceptor policies.yaml (customers section)
 SENTINEL_API_KEY=sk_live_demo_123
 
 # ===========================================
 # LLM Configuration
 # ===========================================
 
-# OpenRouter API Key (for LLM operations)
+# OpenRouter API Key
 OPENROUTER_API_KEY=your-openrouter-api-key-here
 
 # LLM Model Configuration
@@ -31,52 +29,26 @@ LLM_MAX_TOKENS=4096
 
 AGENT_VERBOSE=false
 AGENT_MAX_ITERATIONS=10
+AGENT_PORT=8001
+AGENT_URL=http://localhost:8001
 
-# Server Configuration
-HOST=0.0.0.0
-PORT=8001
-DEBUG=false
+# ===========================================
+# MCP Server Configuration
+# ===========================================
+
+MCP_HOST=0.0.0.0
+MCP_PORT=9000
+MCP_INTERCEPTOR_TOKEN=mcp-secret-token
 
 # ===========================================
 # Redis Configuration
 # ===========================================
 
 REDIS_URL=redis://localhost:6379/0
-REDIS_PASSWORD=
 
 # ===========================================
 # OpenTelemetry Configuration
 # ===========================================
 
-# Enable/disable OpenTelemetry
-OTEL_ENABLED=true
-
-# OTLP Exporter endpoint
+OTEL_ENABLED=false
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
-
-# Service identification
-OTEL_SERVICE_NAME=sentinel-rag-agent
-OTEL_SERVICE_VERSION=1.0.0
-
-# Sampling rate (0.0 to 1.0)
-OTEL_TRACES_SAMPLER_ARG=1.0
-
-# ===========================================
-# Security Configuration
-# ===========================================
-
-# Session TTL in seconds
-SESSION_TTL=3600
-
-# Enable request signing
-ENABLE_REQUEST_SIGNING=false
-
-# CORS Origins (comma-separated)
-CORS_ORIGINS=http://localhost:3000,http://localhost:8000
-
-# ===========================================
-# Logging Configuration
-# ===========================================
-
-LOG_LEVEL=INFO
-LOG_FORMAT=json
