--- a/env.template
+++ b/env.template
@@ -1,54 +1,47 @@
-# Sentinel RAG Template - Environment Configuration
-# Copy this file to .env and fill in your values
-
-# ===========================================
-# Sentinel Interceptor Configuration
-# ===========================================
-
-# Interceptor Backend URL
+# URL where the Interceptor service is running
 SENTINEL_URL=http://localhost:8000
 
-# API Key for Interceptor authentication
+# API Key for authenticating with the Interceptor
 SENTINEL_API_KEY=sk_live_demo_123
 
-# ===========================================
-# LLM Configuration
-# ===========================================
-
-# OpenRouter API Key
+# OpenRouter - LLM Provider
 OPENROUTER_API_KEY=your-openrouter-api-key-here
 
-# LLM Model Configuration
-LLM_MODEL=gpt-4-turbo-preview
+# Used by MCP to send tool results back to the Agent
+AGENT_URL=http://localhost:8001
+
+# Host and port where the MCP server listens for Interceptor requests
+MCP_HOST=0.0.0.0
+MCP_PORT=9000
+
+# Authentication token for MCP server (basic auth between Interceptor and MCP)
+MCP_INTERCEPTOR_TOKEN=mcp-secret-token
+
+# AGENT CONFIG
+
+AGENT_PORT=8001
+LLM_MODEL=nvidia/nemotron-nano-9b-v2:free
 LLM_TEMPERATURE=0.1
 LLM_MAX_TOKENS=4096
 
-# ===========================================
-# Agent Configuration
-# ===========================================
-
-AGENT_VERBOSE=false
+# Maximum number of tool-calling iterations per agent invocation
 AGENT_MAX_ITERATIONS=10
-AGENT_PORT=8001
-AGENT_URL=http://localhost:8001
+
+# Enable verbose agent logging
+AGENT_VERBOSE=false
+
+
+# Configured in sentinel_config.yaml, but can be overridden here if needed
+SESSION_TTL=3600
 
 # ===========================================
-# MCP Server Configuration
+# Observability (Optional)
 # ===========================================
 
-MCP_HOST=0.0.0.0
-MCP_PORT=9000
-MCP_INTERCEPTOR_TOKEN=mcp-secret-token
-
-# ===========================================
-# Redis Configuration
-# ===========================================
-
-REDIS_URL=redis://localhost:6379/0
-
-# ===========================================
-# OpenTelemetry Configuration
-# ===========================================
-
+# Enable OpenTelemetry tracing
 OTEL_ENABLED=false
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4317
+
+# Logging level: DEBUG, INFO, WARNING, ERROR
+LOG_LEVEL=INFO
+LOG_FORMAT=text
